<resources xmlns:xliff="urn:oasis:name:tc:xliff:document:1.2">
    <string name="app_name">Just Java</string>
    <string name="quantity">Quantity</string>
    <string name="decrement">-</string>
    <string name="quantity_text_view">0</string>
    <string name="increment">+</string>
    <string name="orderSummary">Order Summary</string>
    <string name="price_text_View">Total : $0</string>
    <string name="order">Order</string>
    <string name="topping">Toppings</string>
    <string name="whippedCream">Whipped cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="nameHint">Name</string>
    <string name="toastMessageDecrement">Sorry!! you cannot have order less 1 than coffee</string>
    <string name="toastMessageIncrement">Sorry!! you cannot have order more than 100 coffees</string>
    <string name="toastMessageName">Please!! Enter you name before order. Thank you</string>
    <string name="extraSubject">"Just Java order for "</string>
    <string name="thank_you">Thank you!</string>
    <string name="order_summary_name">Name: <xliff:g id="name" example="amy">%s</xliff:g></string>


</resources>