<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.ghulam.justjava_app.MainActivity">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="16dp">

        <EditText
            android:id="@+id/name_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nameHint"
            android:layout_marginBottom="16dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/topping"
            android:layout_marginBottom="16dp"
            />

        <CheckBox
            android:id="@+id/whipped_cream_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="24dp"
            android:textSize="16sp"
            android:layout_marginBottom="16dp"
            android:text="@string/whippedCream"
            />

        <CheckBox
            android:id="@+id/chocolate_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="24dp"
            android:textSize="16sp"
            android:layout_marginBottom="16dp"
            android:text="@string/chocolate"
            />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quantity"
            android:layout_marginBottom="16dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="16dp">

            <Button
                android:id="@+id/decrementBtn"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:text="@string/decrement"
                android:textAllCaps="true"
                android:onClick="decrement"
                />

            <TextView
                android:id="@+id/quantity_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:hint="@string/quantity_text_view"
                android:textSize="16sp"
                android:textColor="@android:color/black"
                />

            <Button
                android:id="@+id/incrementBtn"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginLeft="8dp"
                android:text="@string/increment"
                android:textAllCaps="true"
                android:onClick="increment"/>

        </LinearLayout>

        <!--<TextView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginBottom="16dp"-->
            <!--android:text="@string/orderSummary"-->
            <!--android:textAllCaps="true" />-->

        <!--<TextView-->
            <!--android:id="@+id/order_summary_text_view"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginBottom="16dp"-->
            <!--android:hint="@string/price_text_View"-->
            <!--android:text=""-->
            <!--android:textAllCaps="true" />-->

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order"
            android:textAllCaps="true"
            android:onClick="submitOrder"
            />

    </LinearLayout>

</ScrollView>